--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ REFRESH_TOKEN_SECRET=your_refresh_token_secret
 REFRESH_TOKEN_EXPIRY=10d 
 
 MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net
+
+NODE_ENV= 
